# gcoin

./: .gitignore  Cargo.toml  README.md
chain/: 000005.ldb  000008.ldb  LOG  LOG.old  MANIFEST-000007
client/: .gitignore  Cargo.toml  priv.pem  pub.pem
client/src/: console.rs  crypto.rs  data.rs  key.rs  main.rs  requests.rs
demo/: 000008.ldb  000032.ldb  000052.ldb  000054.ldb  000057.ldb  000060.ldb  000063.ldb  000066.ldb  000069.ldb  000076.ldb  000079.ldb  000082.ldb  LOG  LOG.old  MANIFEST-000007  MANIFEST-000029  MANIFEST-000081
server/: Cargo.toml  README.md
server/chain/: 000005.ldb  000008.ldb  000009.ldb  000011.ldb  000014.ldb  000016.ldb  000042.ldb  000044.ldb  000053.ldb  000094.ldb  000103.ldb  000114.ldb  000119.ldb  000122.ldb  000129.ldb  000132.ldb  000137.ldb  000140.ldb  000149.ldb  LOG  LOG.old  MANIFEST-000004  MANIFEST-000008  MANIFEST-000013  MANIFEST-000018  MANIFEST-000037  MANIFEST-000044  MANIFEST-000046  MANIFEST-000050  MANIFEST-000071  MANIFEST-000098  MANIFEST-000126  MANIFEST-000131  MANIFEST-000151
server/src/: main.rs
server/src/blockchain/: block.rs  chain.rs
server/src/db/: db.rs
server/src/payload/: data.rs
server/src/utils/: crypto.rs
src/: data.rs  main.rs
src/blockchain/: block.rs  chain.rs  mod.rs
src/db/: db.rs
src/payload/: data.rs
src/utils/: crypto.rs
