[package]
name = "gcoin"
version = "0.1.0"
authors = ["kaffarell <gabrielgoller123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
leveldb = "0.8.6"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"