[package]
name = "client"
version = "0.1.0"
authors = ["gabriel <kaffarell>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
openssl = "0.10.32"